[tool.poetry]
name = "robot-vansah"
version = "0.0.1"
description = ""
authors = ["Shubham Mourya <shubham.mourya@testpoint.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
robotframework = "^7.0"
robotframework-seleniumlibrary = "^6.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
